# shl-agentic-recommender

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SRS.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml
app/: __init__.py  main.py
app/agent/: __init__.py  action_executor.py  agent.py  clarification_engine.py  classifier.py  comparison_engine.py  context.py  conversation.py  conversation_manager.py  decision.py  extractor.py  guardrails.py  history.py  intent.py  memory.py  models.py  orchestrator.py  parser.py  recommendation_engine.py  refinement_engine.py  response_builder.py  response_validator.py  rules.py  state.py  statistics.py  turns.py  validator.py
app/api/: dependencies.py  exceptions.py  middleware.py  shutdown.py  startup.py
app/catalog/: catalog_builder.py  cleaner.py  deduplicator.py  manager.py  models.py  normalizer.py  parser.py  scraper.py  statistics.py  validator.py
app/configs/: constants.py  logging.py  settings.py
app/llm/: __init__.py  client.py  factory.py  fallback.py  models.py  prompt_manager.py  provider.py  service.py  statistics.py  structured_output.py  template_manager.py  (+1 more)
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
scripts/: check_env.py  dev.py  run.py
tests/: conftest.py  test_agent.py  test_agent_core.py  test_api.py  test_catalog.py  test_conversation_engine.py  test_llm.py  test_production_integration.py  test_retrieval_engine.py  test_retriever.py
(+36 files in other folders)
